hphp/hack/test/typecheck/sealed/sealed_classes19.php.exp
File "sealed_classes19.php", line 2, characters 12-17:
`__Sealed` can only be used with named types, e.g. `Foo::class` (Parsing[1002])
File "sealed_classes19.php", line 2, characters 12-17:
parent is undefined (Typing[4076])
