hphp/hack/test/typecheck/sealed/sealed_classes19.php
<?hh
<<__Sealed(parent::class)>> class X {}
